--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -43,7 +43,7 @@ jobs:
         uses: actions/configure-pages@v3
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
-        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }} --future"
+        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }} " --future
         env:
           JEKYLL_ENV: production
       - name: Upload artifact
