--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -37,7 +37,12 @@ jobs:
         with:
           ruby-version: '3.0' # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-          cache-version: 2 # Increment this number if you need to re-download cached gems
+          cache-version: 3 # Increment this number if you need to re-download cached gems
+      - name: vipsInstall
+        run: apt-get install libvips-dev 
+
+
+      
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
