--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -39,7 +39,7 @@ jobs:
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           cache-version: 3 # Increment this number if you need to re-download cached gems
       - name: vipsInstall
-        run: apt-get install libvips-dev 
+        run: sudo apt-get -y install libvips-dev 
 
 
       
